--- a/src/main/resources/assets/ccmodpack/lang/en_US.lang
+++ b/src/main/resources/assets/ccmodpack/lang/en_US.lang
@@ -21,7 +21,8 @@ tile.ccmodpack_blockStairsDiorite.name=Diorite Stairs
 
 
 # Walls
-tile.ccmodpack_blockWallGranite.name=Granite Stairs
+tile.ccmodpack_blockWallGranite.name=Granite Wall
+ccmodpack_blockWallGranite.name=Granite Wall
 
 
 # GUI
